crates/analyzer/tests/snapshots/errors__abi_encode_from_storage.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: value must be copied to memory
  ┌─ compile_errors/abi_encode_from_storage.fe:5:9
  │
5 │         self.my_field.abi_encode()
  │         ^^^^^^^^^^^^^ this value is in storage
  │
  = Hint: values located in storage can be copied to memory using the `to_mem` function.
  = Example: `self.my_array.to_mem()`


